--- a/plain.lock.yml
+++ b/plain.lock.yml
@@ -9,7 +9,7 @@
 # To update a single package to the latest version compatible with the version constraints in the source:
 #     conda-lock lock  --lockfile plain.lock.yml --update PACKAGE
 # To re-solve the entire environment, e.g. after changing a version constraint in the source file:
-#     conda-lock -f webdriver_hist.yml --lockfile plain.lock.yml
+#     conda-lock -f webdriver_hist.yml -f plain.yml --lockfile plain.lock.yml
 version: 1
 metadata:
   content_hash:
@@ -22,11 +22,12 @@ metadata:
     used_env_vars: []
   platforms:
   - linux-64
-  - win-64
   - osx-64
   - osx-arm64
+  - win-64
   sources:
   - webdriver_hist.yml
+  - plain.yml
 package:
 - name: _libgcc_mutex
   version: '0.1'
